--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Kemzura/secondSite#readme",
   "dependencies": {
+    "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "npm": "^6.1.0"
   },
